<resources>
    <string name="app_name">Dream Catcher</string>
    <string name="s_icon_description">Splash Icon</string>
    <string name="copyright"><![CDATA[© 2019 Ola & Schatze]]></string>
    <string name="splash_name">dreamcatcher</string>
    <!--<string name="date">FRI, MAY 16</string>-->
    <string name='date'>%1$s<sup>%2$s</sup> %3$s, %4$s %5$d </string>
    <string name="greeting_msg">Hello Daniel</string>
    <string name="dash_header_1">Upcoming tasks and goals</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_2_hint">Re-type Password</string>
    <string name="create1">Create</string>
    <string name="create2">New</string>
    <string name="task_name">Task Name</string>
    <string name="task_type">Task Type</string>
    <string name="task_description">Task Description</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_description_hint">Task Description</string>
    <string name="task_date_time">Date and Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="create_task">Create Task</string>
    <string name="current_tasks">Active Tasks</string>
    <string name="current_task_number">9</string>
    <string name="my_profile">My Profile</string>
    <string name="name_label_profile">Name</string>
    <string name="name_profile">Daniel Wole</string>
    <string name="email_label_profile">Email</string>
    <string name="email_profile">ola@gmail.com</string>
    <string name="username_label_profile">Username</string>
    <string name="username_profile">olaaa</string>
    <string-array name="task_type_spinner">
        <item>Long Term Goal</item>
        <item>Short Term Goal</item>
    </string-array>
</resources>
